# geneticAlgorithm

./: CMakeLists.txt
src/: CMakeLists.txt  crossover.cpp  crossover.h  engine.cpp  engine.h  individual.cpp  individual.h  mpiutils.cpp  mpiutils.h  mutation.cpp  mutation.h  population.cpp  population.h  selection.cpp  selection.h
